feat: connection with wallet its ok

--- a/src/layouts/MainLayout/MainLayout.css
+++ b/src/layouts/MainLayout/MainLayout.css
@@ -1,3 +1,4 @@
+/* MAIN LAYOUT */
 .mainLayout {
   /* border: 1px solid blue; */
   width: 100%;
@@ -5,46 +6,45 @@
   padding: 0.5rem;
 }
 
+/* HEADER */
 .mainLayout-header {
   /* border: 1px solid red; */
   width: 100%;
-  height: 5rem;
+  min-height: 5rem;
 
   display: flex;
   flex-flow: row wrap;
   align-items: center;
   justify-content: space-between;
 }
-
+/* NAVIGATION BAR */
 .mainLayout-header-nav {
   /* border: 1px solid blue; */
   height: 100%;
 
   display: flex;
+  flex-flow: row wrap;
   align-items: center;
   gap: 1rem;
 }
-.mainLayout-header-nav1 {
-  /* border: 1px solid red; */
+/* BUTTONS OF NAVIGATION */
+.mainLayout-header-nav-button1 {
+  border: 1px solid blue;
   background-color: rgb(226, 241, 4);
   width: 6rem;
   height: 2rem;
   border-radius: 0.5rem;
-  text-align: center;
-  font-weight: 600;
-
-  display: block;
 }
-
-.mainLayout-header-conect {
-  /* border: 1px solid black; */
+/* BUTTONS OF CONECCT */
+.mainLayout-header-nav-button2 {
+  border: 1px solid black;
   background-color: rgb(124, 124, 255);
-  border-radius: 0.5rem;
-
   width: 6rem;
   height: 2rem;
+  border-radius: 0.5rem;
 }
 
+/* CONTENT */
 .mainLayout-content {
   /* border: 1px solid black; */
   width: 100%;
